fix scrollbar link in index html

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -178,7 +178,6 @@ section#banner {
 	width: 100%;
 	height: 100%;
 	padding: 0 100px 100px 100px;
-	overflow: hidden;
 
 	@media screen and (max-width: 900px) {
 		padding: 0 20px 100px 20px;
@@ -240,12 +239,20 @@ section#banner {
 						font-weight: 400;
 						font-size: 18px;
 						color: white;
+
+						@media screen and (max-width: 600px) {
+							font-size: 12px;
+						}
 					}
 
 					.name {
 						font-weight: 700;
 						font-size: 18px;
 						color: $secondary-color;
+
+						@media screen and (max-width: 600px) {
+							font-size: 10px;
+						}
 					}
 				}
 			}
@@ -309,6 +316,10 @@ section#banner {
 
 	section#navigate-topup {
 		margin-top: 64px;
+
+		.scroll-wrapper {
+			overflow: auto;
+		}
 
 		.scrollbar-wrapper {
 			margin-left: 20px;
